--- a/css/styles.css
+++ b/css/styles.css
@@ -132,3 +132,9 @@ fieldset {
     border-radius: 1rem;
     width: 100%;
 }
+
+span.create-disc {
+    width: 95%;
+    margin: auto;
+    font-size: 0.75rem;
+}
