--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ body {
     align-items: center;
     gap: 1rem;
     max-width: 480px;
+    min-width: fit-content;
     width: 100%;
     align-self: center;
     margin: auto;
@@ -114,13 +115,18 @@ input[type='submit']:active {
     color: var(--light);
 }
 
-input {
+input,
+textarea {
     background-color: var(--light);
     border: 1px solid var(--dark);
     border-radius: 1rem;
-    height: 2rem;
+    min-height: 2rem;
     padding: 0 1rem;
     width: 100%;
+}
+
+textarea {
+    min-width: 100%;
 }
 
 input[type='radio'] {
@@ -137,4 +143,48 @@ span.create-disc {
     width: 95%;
     margin: auto;
     font-size: 0.75rem;
+}
+
+#marketplace-input {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 1rem;
+}
+
+input[type='checkbox'] {
+    appearance: none;
+    display: grid;
+    place-content: center;
+    border-radius: 0;
+    width: 1rem;
+    background-color: var(--light);
+    border: 2px solid var(--dark);
+    min-height: 30px;
+    width: 30px;
+    padding: 0;
+}
+
+input[type='checkbox']::before {
+    content: '';
+    width: 1.25rem;
+    height: 1.25rem;
+    scale: 1;
+    transition: scale 0.05s linear;
+    background-color: var(--dark);
+}
+
+input[type='checkbox']:checked::before {
+    scale: 0;
+}
+
+label[for='market'] {
+    padding-left: 0.25rem;
+    padding-top: 0.5rem;
+    height: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
 }
