--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@ input[type='checkbox']:checked::before {
 label[for='market'] {
     padding-left: 0.25rem;
     padding-top: 0.5rem;
+    margin-bottom: 0.5rem;
     height: 1rem;
     display: flex;
     flex-direction: row;
