--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body {
 
 form {
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 1rem;
 }
@@ -127,6 +128,8 @@ textarea {
 
 textarea {
     min-width: 100%;
+    padding: 0.75rem;
+    font-size: 0.8rem;
 }
 
 input[type='radio'] {
@@ -139,14 +142,19 @@ fieldset {
     width: 100%;
 }
 
-span.create-disc {
+span {
     width: 95%;
+    text-align: center;
     margin: auto;
     font-size: 0.75rem;
 }
 
+span#post-disc {
+    display: none;
+}
+
 #marketplace-input {
-    display: flex;
+    display: none;
     flex-direction: row;
     width: 100%;
     gap: 1rem;
@@ -169,13 +177,13 @@ input[type='checkbox']::before {
     content: '';
     width: 1.25rem;
     height: 1.25rem;
-    scale: 1;
+    scale: 0;
     transition: scale 0.05s linear;
     background-color: var(--dark);
 }
 
 input[type='checkbox']:checked::before {
-    scale: 0;
+    scale: 1;
 }
 
 label[for='market'] {
